--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "buffer": "^6.0.3",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "protobufjs": "^7.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
@@ -21,7 +23,8 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "stocksocket": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
