--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -1,33 +1,42 @@
 {
   "name": "deltapredictclient",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "windows": "react-native run-windows"
   },
   "dependencies": {
-    "@react-navigation/drawer": "^6.4.4",
-    "@react-navigation/native": "^6.0.12",
-    "@react-navigation/native-stack": "^6.8.0",
-    "buffer": "^6.0.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "crypto-js": "^4.1.1",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
-    "protobufjs": "^7.1.0",
+    "polyfills": "^2.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "stocksocket": "^2.1.2"
+    "request-promise": "^4.2.6",
+    "Require": "^1.1.2",
+    "require-dir": "^1.2.0",
+    "require-resolve-cli": "^1.0.0",
+    "xxg-crypto": "^1.0.0",
+    "expo-splash-screen": "~0.16.2",
+    "react-native-windows": "0.69.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "request": "^2.88.2",
+    "metro-config": "^0.70.3"
   },
   "private": true
 }
