--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "chart.js": "^3.9.1",
     "crypto-js": "^4.1.1",
     "expo": "~46.0.9",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "polyfills": "^2.1.1",
     "react": "18.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
