--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -9,6 +9,7 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
@@ -24,10 +25,12 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-windows": "0.69.9",
     "react-use": "^17.4.0",
