--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@inteach/react-native-scroll-indicator": "^0.0.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
@@ -30,6 +31,8 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-scroll-indicator": "^0.1.0",
+    "react-native-scroll-view": "^0.1.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-windows": "0.69.9",
