--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-scroll-indicator": "^0.1.0",
     "react-native-scroll-view": "^0.1.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-windows": "0.69.9",
