--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-bootstrap-styles": "^4.5.0-r",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.4",
@@ -36,12 +37,14 @@
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
+    "react-native-web-responsive": "^1.0.5",
     "react-native-windows": "0.69.9",
     "react-use": "^17.4.0",
     "request-promise": "^4.2.6",
     "Require": "^1.1.2",
     "require-dir": "^1.2.0",
     "require-resolve-cli": "^1.0.0",
+    "trading-calendar": "^1.1.1",
     "use-debounce": "^8.0.4",
     "use-lodash-debounce": "^1.3.0",
     "xxg-crypto": "^1.0.0"
