--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -20,12 +20,15 @@
     "expo": "~46.0.9",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "papaparse": "^5.3.2",
     "polyfills": "^2.1.1",
     "react": "18.0.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-autocomplete-input": "^5.2.0",
     "react-native-bootstrap-styles": "^4.5.0-r",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.4",
