--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^3.9.1",
     "crypto-js": "^4.1.1",
     "expo": "~46.0.9",
+    "expo-linear-gradient": "^12.0.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "papaparse": "^5.3.2",
@@ -40,6 +41,7 @@
     "react-native-scroll-indicator": "^0.1.0",
     "react-native-scroll-view": "^0.1.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-native-web-responsive": "^1.0.5",
