--- a/DeltaPredictClient/app.json
+++ b/DeltaPredictClient/app.json
@@ -4,10 +4,10 @@
     "slug": "DeltaPredictClient",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Photos/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/Photos/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,7 +22,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/Photos/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     
