--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -32,6 +32,7 @@
     "react-native-autocomplete-input": "^5.2.0",
     "react-native-bootstrap-styles": "^4.5.0-r",
     "react-native-elements": "^3.4.2",
+    "react-native-fusioncharts": "^5.2.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.4",
@@ -40,6 +41,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-scroll-indicator": "^0.1.0",
     "react-native-scroll-view": "^0.1.0",
+    "react-native-svg": "^13.6.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-table-component": "^1.2.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^9.2.0",
