--- a/DeltaPredictClient/package.json
+++ b/DeltaPredictClient/package.json
@@ -29,6 +29,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-native": "0.69.6",
+    "react-native-autocomplete-dropdown": "^2.1.0",
     "react-native-autocomplete-input": "^5.2.0",
     "react-native-bootstrap-styles": "^4.5.0-r",
     "react-native-elements": "^3.4.2",
